# scorer

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/2022-07-07-200017_create_players/: down.sql  up.sql
src/: main.rs  schema.rs
src/api/: hello.rs  player.rs
src/models/: player.rs
src/services/: player.rs
